<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
	android:id="@+id/ea_ll_root">
	
	<ScrollView 
	    android:layout_height="wrap_content" 
		android:layout_width="fill_parent" 
		android:id="@+id/ea_sv_full_scroller">
		
		<LinearLayout 
		    android:orientation="vertical" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent">
			
		    <View android:layout_width="fill_parent" 
				  android:layout_height="1dip" 
				  android:background="@android:drawable/divider_horizontal_dark">
			</View>
			
			<LinearLayout android:layout_height="wrap_content" 
						  android:id="@+id/ea_ll_alarm_time" 
						  android:focusable="true" 
						  android:layout_width="fill_parent" 
						  android:padding="10dip" 
						  android:background="@android:drawable/list_selector_background" 
						  android:clickable="true" 
						  android:orientation="vertical" 
						  android:minHeight="70dip">
						  
				<TextView android:layout_width="wrap_content" 
						  android:layout_height="wrap_content" 
						  android:textSize="18dip" 
						  android:textColor="#FFF" 
						  android:text="@string/alarm_time">
				</TextView>
				
				<TextView android:layout_width="wrap_content" 
						  android:layout_height="wrap_content" 
						  android:id="@+id/time_selection">
				</TextView>
			</LinearLayout>
		    
			<View android:layout_width="fill_parent" 
				  android:layout_height="1dip" 
				  android:background="@android:drawable/divider_horizontal_dark">
			</View>
			
			<LinearLayout android:layout_height="wrap_content" 
						  android:id="@+id/ea_ll_alarm_repeat" 
						  android:focusable="true" 
						  android:layout_width="fill_parent" 
						  android:padding="10dip" 
						  android:background="@android:drawable/list_selector_background" 
						  android:clickable="true" 
						  android:orientation="vertical" 
						  android:minHeight="70dip">
			
				<TextView android:layout_width="wrap_content" 
						  android:layout_height="wrap_content" 
						  android:textColor="#FFF" 
						  android:textSize="18dip" 
						  android:text="@string/alarm_repeat">
				</TextView>
			
				<TextView android:layout_width="wrap_content" 
						  android:layout_height="wrap_content" 
						  android:id="@+id/repeat_selection"
						  android:text="Never">
				</TextView>
			</LinearLayout>
						
			<View android:layout_width="fill_parent" 
				  android:layout_height="1dip" 
				  android:background="@android:drawable/divider_horizontal_dark">
			</View>
			
			<LinearLayout android:layout_height="wrap_content" 
						  android:focusable="true" 
						  android:layout_width="fill_parent" 
						  android:padding="10dip" 
						  android:background="@android:drawable/list_selector_background" 
						  android:clickable="true" 
						  android:orientation="vertical" 
						  android:minHeight="70dip" 
						  android:id="@+id/ll_label">
						  
				<TextView android:layout_width="wrap_content" 
						  android:layout_height="wrap_content" 
						  android:textColor="#FFF" 
						  android:textSize="18dip" 
						  android:text="@string/label">
				</TextView>
				
				<TextView android:layout_width="wrap_content" 
						  android:layout_height="wrap_content" 
						  android:text="@string/label_msg" 
						  android:id="@+id/label_view">
				</TextView>
			</LinearLayout>

			<View android:layout_width="fill_parent" 
				  android:layout_height="1dip" 
				  android:background="@android:drawable/divider_horizontal_dark">
			</View>
			
			<LinearLayout android:layout_height="wrap_content" 
						  android:layout_width="fill_parent" 
						  android:background="@android:drawable/dark_header">
						  
				<TextView android:layout_width="wrap_content" 
						  android:layout_height="wrap_content" 
						  android:textColor="#FFF" 
						  android:padding="2dip" 
						  android:textStyle="bold" 
						  android:text="@string/alarm_mode_header">
				</TextView>
			</LinearLayout>
			
			<View android:layout_width="fill_parent" 
				  android:layout_height="1dip" 
				  android:background="@android:drawable/divider_horizontal_dark">
			</View>
			
			<LinearLayout android:focusable="true" 
						  android:orientation="horizontal" 
						  android:layout_width="fill_parent" 
						  android:background="@android:drawable/list_selector_background" 
						  android:clickable="true" 
						  android:layout_height="wrap_content" 
						  android:gravity="center_vertical" 
						  android:padding="10dip" 
						  android:minHeight="70dip" 
						  android:id="@+id/enable_failsafe">
						  
				<LinearLayout android:layout_height="wrap_content" 
							  android:orientation="vertical" 
							  android:layout_width="0dip" 
							  android:layout_weight="1">

					<TextView android:layout_width="wrap_content" 
							  android:layout_height="fill_parent" 
							  android:textSize="18dip" 
							  android:textColor="#FFF" 
							  android:text="@string/failsafe_mode">
					</TextView>
					
					<TextView android:layout_width="wrap_content" 
							  android:layout_height="wrap_content" 
							  android:text="@string/failsafe_desc">
					</TextView>
				</LinearLayout>
				
				<CheckBox android:layout_width="wrap_content" 
						  android:layout_height="wrap_content" 
						  android:focusable="false" 
						  android:focusableInTouchMode="false" 
						  android:id="@+id/chk_failsafe">
				</CheckBox>
			</LinearLayout>
			
			<View android:layout_width="fill_parent" 
				  android:layout_height="1dip" 
				  android:background="@android:drawable/divider_horizontal_dark">
			</View>
			
			<LinearLayout
			    android:focusable="true" 
				android:orientation="horizontal" 
			    android:layout_width="fill_parent" 
			    android:background="@android:drawable/list_selector_background" 
			    android:clickable="true" 
			    android:layout_height="wrap_content" 
			    android:gravity="center_vertical" 
			    android:padding="10dip" 
			    android:minHeight="70dip">
						  
				<LinearLayout android:layout_height="wrap_content" 
							  android:orientation="vertical" 
							  android:layout_width="0dip" 
							  android:layout_weight="1">

					<TextView android:layout_width="wrap_content" 
							  android:layout_height="0dip" 
							  android:textSize="18dip" 
							  android:textColor="#FFF" 
							  android:layout_weight="1" 
							  android:text="@string/snooze_limit">
					</TextView>

					<SeekBar
						android:id="@+id/seekbar"
						android:layout_width="fill_parent"   
						android:layout_height="wrap_content"   
						android:layout_margin="10dip">
					</SeekBar>
					
					<TextView 
						android:layout_width="wrap_content" 
					  	android:layout_height="wrap_content"
					  	android:textSize="15dip"  
					  	android:id="@+id/snooze_limit">
					</TextView>	
				</LinearLayout>
			</LinearLayout>
			
			<View android:layout_width="fill_parent" 
				  android:layout_height="1dip" 
				  android:background="@android:drawable/divider_horizontal_dark">
			</View>
			
			<LinearLayout android:focusable="true" 
						  android:orientation="horizontal" 
						  android:layout_width="fill_parent" 
						  android:background="@android:drawable/list_selector_background" 
						  android:clickable="true" 
						  android:layout_height="wrap_content" 
						  android:gravity="center_vertical" 
						  android:padding="10dip" 
						  android:minHeight="70dip" 
						  android:id="@+id/enable_challenge">
						  
				<LinearLayout android:layout_height="wrap_content" 
							  android:orientation="vertical" 
							  android:layout_width="0dip" 
							  android:layout_weight="1">

					<TextView android:layout_width="wrap_content" 
							  android:layout_height="0dip" 
							  android:textSize="18dip" 
							  android:textColor="#FFF" 
							  android:layout_weight="1" 
							  android:text="@string/challenge_mode">
					</TextView>
					
					<TextView android:layout_width="wrap_content" 
							  android:layout_height="wrap_content" 
							  android:text="@string/challenge_desc">
					</TextView>
				</LinearLayout>
				
				<CheckBox android:layout_width="wrap_content" 
						  android:layout_height="wrap_content" 
						  android:focusable="false" 
						  android:focusableInTouchMode="false" 
						  android:id="@+id/chk_challenge">
				</CheckBox>
			</LinearLayout>
			
			<View android:layout_width="fill_parent" 
				  android:layout_height="1dip" 
				  android:background="@android:drawable/divider_horizontal_dark">
			</View>
			
			<LinearLayout android:layout_height="wrap_content" 
						  android:layout_width="fill_parent" 
						  android:background="@android:drawable/dark_header">
						  
				<TextView android:layout_width="wrap_content" 
						  android:layout_height="wrap_content" 
						  android:textColor="#FFF" 
						  android:padding="2dip" 
						  android:textStyle="bold" 
						  android:text="@string/alarm_settings_header">
				</TextView>
			</LinearLayout>
			
			<View android:layout_width="fill_parent" 
				  android:layout_height="1dip" 
				  android:background="@android:drawable/divider_horizontal_dark">
			</View>
			
			<LinearLayout 
			    android:id="@+id/ll_alarm_sound"
		    	android:focusable="true" 
				android:orientation="horizontal" 
				android:layout_width="fill_parent" 
				android:background="@android:drawable/list_selector_background" 
				android:clickable="true" 
				android:layout_height="wrap_content" 
				android:gravity="center_vertical" 
				android:padding="10dip" 
				android:minHeight="70dip">
					  
				<LinearLayout android:layout_height="wrap_content" 
							  android:orientation="vertical" 
							  android:layout_width="0dip" 
							  android:layout_weight="1">

					<TextView android:layout_width="wrap_content" 
							  android:layout_height="0dip" 
							  android:textSize="18dip" 
							  android:textColor="#FFF" 
							  android:layout_weight="1" 
							  android:text="@string/alarm_sound">
					</TextView>
					
					<TextView 
						android:layout_width="wrap_content" 
					  	android:layout_height="wrap_content" 
					  	android:id="@+id/sound_pick">
					</TextView>
					
				</LinearLayout>
			</LinearLayout>
			
			<View android:layout_width="fill_parent" 
				  android:layout_height="1dip" 
				  android:background="@android:drawable/divider_horizontal_dark">
			</View>
			
			<LinearLayout android:focusable="true" 
						  android:orientation="horizontal" 
						  android:layout_width="fill_parent" 
						  android:background="@android:drawable/list_selector_background" 
						  android:clickable="true" 
						  android:layout_height="wrap_content" 
						  android:gravity="center_vertical" 
						  android:padding="10dip" 
						  android:minHeight="70dip">
						  
				<LinearLayout android:layout_height="wrap_content" 
							  android:orientation="vertical" 
							  android:layout_width="0dip" 
							  android:layout_weight="1">

					<TextView android:layout_width="wrap_content" 
							  android:layout_height="0dip" 
							  android:textSize="18dip" 
							  android:textColor="#FFF" 
							  android:layout_weight="1" 
							  android:text="@string/alarm_vibrate">
					</TextView>
					
				</LinearLayout>
				
				<CheckBox android:layout_width="wrap_content" 
						  android:layout_height="wrap_content" 
						  android:focusable="false" 
						  android:focusableInTouchMode="false" 
						  android:id="@+id/chk_alarm_vibrate">
				</CheckBox>
			</LinearLayout>
			
			<View android:layout_width="fill_parent" 
				  android:layout_height="50dip">
			</View>
		</LinearLayout>
	</ScrollView>

	<LinearLayout 
		    android:orientation="horizontal" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:background="#848484"
			android:layout_alignParentBottom="true">
		
		<Button 
		    android:layout_width="fill_parent"
	       	android:layout_height="wrap_content"
	       	android:layout_weight="1"
	       	android:layout_marginTop="4dip" 
	       	android:textSize="15dip" 
	       	android:text="@string/save_button" 
	       	android:id="@+id/save_settings">
		</Button>

		<Button 
		    android:layout_width="fill_parent" 
	       	android:layout_height="wrap_content"
	       	android:layout_weight="1"
	       	android:layout_marginTop="4dip"  
	       	android:textSize="15dip" 
	       	android:text="@string/cancel_button" 
	       	android:id="@+id/cancel_settings">
	 	</Button>
	 </LinearLayout>
</RelativeLayout>
      
